# neaten

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bump-version.yml  publish-release.yml  release-with-exe.yml  release.yml  rust-release.yml  rust.yml
documents/: command.md  config.json  config.yml  note.md
sample/: config.json  config.yml
src/: ci.yml  config.rs  engine.rs  error.rs  lib.rs  main.rs  manager.rs
